--- a/css/maket.css
+++ b/css/maket.css
@@ -145,7 +145,7 @@ img {
   margin-bottom: 45px;
 }
 .lnitems {
-  flex-basis: calc (100%/3-80/3);
+  flex-basis: calc(100% / 3 - 80px / 3);
   flex-grow: 0;
   margin-right: 40px;
 }
@@ -179,7 +179,6 @@ img {
   width: 160px;
   height: 50px;
   background-color: #4ec6ab;
-  text-align: center;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 26px;
